--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,7 @@
     <title>Amanda - Oficina Git</title>
 </head>
 <body>
-    <h1>Lorem Ipsom</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis molestiae possimus vel tempore nisi omnis quis a assumenda molestias quo facere reiciendis id, vero distinctio rerum soluta neque, officiis debitis!</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque earum perferendis eveniet suscipit quas ea saepe accusamus, et provident. Ea illo nihil asperiores officia velit aspernatur, fugiat blanditiis vel porro!
-</p>
+    <h1>Lorem ipsum dolor sit amet</h1>
+    <p>Lorem adipisicing elit. Blanditiis molestiae possimus vel tempore nisi omnis quis a assumenda molestias quo facere reiciendis id, vero distinctio rerum soluta neque, officiis debitis!</p>
 </body>
 </html>
