Adicionado comentário no index.html

--- a/index.html
+++ b/index.html
@@ -53,8 +53,21 @@
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
+
+      <section id="comments_session">
+        <h3>
+            <a id="comments" class="anchor" href="#comments" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comments</h3>
+        </h3>
+        <div>
+            <p>De <a href="https://github.com/patymori" class="user-mention">@patymori</a>:</p>
+            <p>
+                Obrigada, <a href="https://github.com/MariaLabHackerspace" class="user-mention">@MariaLabHackerspace</a>, pela maravilhosa oficina de Git e GitHub! Agora é botar a mão na massa! <3
+            </p>
+        </div>
+      </section>
+
     </div>
 
-    
+
   </body>
 </html>
