--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
 
     <div class="container">
       <section id="main_content">
-        <h3>
-          <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-          Oi! (:
-        </h3>
+        <h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Oi! (:</h3>
 
 <p>Este foi o meu segundo contato com o MariaLab, o primeiro foi no Mulheres Techday (onde fui voluntária pela Women Up Games), mas foi a primeira oficina que consegui fazer.</p>
 
